# adobepy

./: CHANGELOG.md  Cargo.toml  README.md  package.json  pyproject.toml
.github/: release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: api-sources.md  architecture.md  dcc-mcp-integration.md  distribution-contract.md  distribution.md  runtime-discovery.md  support-matrix.md  testing.md  usage.md
generators/: ir_to_python.py
generators/api_sources/: adobe_api_sources.json
generators/ir/: after-effects-mvp.json  illustrator-mvp.json  photoshop-mvp.json  premiere-mvp.json
packaging/native-extension-template/: Cargo.toml  README.md  pyproject.toml
packaging/native-extension-template/src/: lib.rs
pyadobe/: pyoxidizer.bzl
python/adobe/after_effects/: _facade_contract.py  session.py  session.pyi
python/adobe/core/: client.py  session.py
python/adobe/dcc_mcp/: __init__.py
python/adobe/illustrator/: _facade_contract.py  session.py  session.pyi
python/adobe/indesign/: _facade_contract.py  session.py  session.pyi
python/adobe/photoshop/: __init__.py  _facade_contract.py  session.py  session.pyi
python/adobe/premiere/: _facade_contract.py  session.py  session.pyi
python/tests/: test_api_sources.py  test_core.py  test_dcc_mcp_integration.py  test_distribution.py  test_facades.py  test_generator.py
scripts/: check_generated_facade_contracts.py  check_native_abi3_config.py  check_wheel_compat.py  package-release.ps1  smoke_install.ps1  smoke_wheel_install.py  test-cep.js  test-uxp-bridge.js
(+7 files in other folders)
